Fix header title too long bug for desktop and responsive

--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,7 @@ input{
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 	box-sizing: border-box;	
+	max-width: 50%;
 }
 
 .display-wrapper ul li {
@@ -106,6 +107,7 @@ input{
 	border: 1px solid #607D8B;
 	background-color: white;
 	margin: 15px auto 15px auto;
+	overflow: hidden;
 }
 
 .bookmark h3{
@@ -214,4 +216,8 @@ input{
 		position: relative;
 		transform: translate(0%);
 	}
+	.display-wrapper {
+		max-width: 100%;
 	}
+
+}
